--- a/app/src/main/res/layout/activity_listar_usuarios.xml
+++ b/app/src/main/res/layout/activity_listar_usuarios.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txtList"
+            android:id="@+id/txtServicoListarNAME"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -25,7 +25,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/btnCad"
+            android:id="@+id/btnServicoVoltarListar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/lstCliente"
+        android:id="@+id/listView_ServicoLISTAR"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
