--- a/app/src/main/res/layout/activity_servico_listar.xml
+++ b/app/src/main/res/layout/activity_servico_listar.xml
@@ -4,19 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:orientation="vertical"
-    android:padding="15px"
-    tools:context=".Telas.PainelControle.painelServico.ServicoListar">
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView2"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="175dp"
-        android:text="AQUI LISTARA TODOS SERVICOS CADASTRADOS" />
+        android:layout_height="54dp"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnServicoVoltarListar"
+        <TextView
+            android:id="@+id/txtServicoListarNAME"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:text="@string/txtServicoListarNAME"
+            android:textColor="#000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnServicoVoltarListar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/btnServicoVoltarListar"
+            android:textColor="#000"
+            android:textStyle="bold"
+            app:backgroundTint="@android:color/darker_gray" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/listView_ServicoLISTAR"
         android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:text="@string/btnServicoVoltarListar" />
+        android:layout_height="match_parent" />
+
 </LinearLayout>
