--- a/app/src/main/res/layout/activity_tela_cadastrar_funcionario.xml
+++ b/app/src/main/res/layout/activity_tela_cadastrar_funcionario.xml
@@ -9,10 +9,10 @@
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:src="@drawable/slogan"
+        android:layout_width="412dp"
+        android:layout_height="857dp"
         android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:src="@drawable/slogan" />
 
     <View
         android:layout_width="match_parent"
@@ -160,8 +160,24 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="18dp"
                 android:layout_marginEnd="18dp"
-                android:layout_marginBottom="75dp"
+                android:layout_marginBottom="18dp"
                 android:text="@string/register"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:background="@drawable/bg_button_normal"
+                app:layout_constraintBottom_toTopOf="@+id/btn_voltar"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_voltar"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
+                android:layout_marginBottom="20dp"
+                android:text="@string/Voltar"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textAllCaps="false"
@@ -169,24 +185,6 @@
                 android:background="@drawable/bg_button_normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/func_voltar_style"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="18dp"
-                android:background="@drawable/bg_button_normal"
-                android:text="@string/func_voltar_style"
-                android:textAllCaps="false"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_register" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
