--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,8 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@id/edit_text_credentials"
         app:layout_constraintEnd_toEndOf="parent"
-
         />
+
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edit_text_credentials"
         android:layout_width="match_parent"
@@ -85,7 +85,7 @@
             android:id="@+id/btn_sign_in"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginBottom="75dp"
+            android:layout_marginBottom="18dp"
             android:background="@drawable/bg_button_normal"
             android:text="@string/sign_in"
             android:textAllCaps="false"
@@ -94,27 +94,22 @@
             android:textStyle="bold"
             android:layout_marginStart="18dp"
             android:layout_marginEnd="18dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteX="18dp" />
+            app:layout_constraintBottom_toTopOf="@+id/btn_register" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/cad_func_style"
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="18dp"
             android:background="@drawable/bg_button_normal"
-            android:text="@string/cad_func_style"
+            android:text="@string/Voltar"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginStart="18dp"
             android:layout_marginEnd="18dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
