--- a/app/src/main/res/layout/activity_atv_cadastro_cliente.xml
+++ b/app/src/main/res/layout/activity_atv_cadastro_cliente.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="52dp"
+        android:layout_marginStart="2dp"
         android:orientation="horizontal">
 
         <TextView
@@ -20,36 +21,38 @@
             android:layout_weight="1"
             android:text="@string/titulo_cadastro_cliente"
             android:textSize="18sp"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnGravar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/btn_gravar"
-            app:backgroundTint="@android:color/darker_gray" />
+            android:layout_marginRight="5dp"
+            android:text="@string/btn_gravar" />
 
         <Button
             android:id="@+id/btnExcluir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginRight="5dp"
             android:text="@string/btn_excluir"
-            app:backgroundTint="@android:color/darker_gray" />
+            />
 
         <Button
             android:id="@+id/btnVoltar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/btn_Voltar"
-            app:backgroundTint="@android:color/darker_gray" />
+            />
+
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingStart="5dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -124,7 +127,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="textCapCharacters"
+                />
 
         </LinearLayout>
     </ScrollView>
