--- a/app/src/main/res/layout/activity_atv_cliente.xml
+++ b/app/src/main/res/layout/activity_atv_cliente.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Telas.AtvCliente"
+    android:scaleType="centerCrop"
     android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+
 
         <TextView
             android:id="@+id/txtList"
@@ -28,13 +31,11 @@
             android:id="@+id/btnCad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginTop="3dp"
             android:text="@string/btnCad"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:background="@drawable/bg_button_normal"
             />
 
     </LinearLayout>
@@ -42,7 +43,9 @@
     <ListView
         android:id="@+id/lstCliente"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:cacheColorHint="@color/white"
+        />
 
 </LinearLayout>
 
