--- a/app/src/main/res/layout/activity_atv_cadastro_cliente.xml
+++ b/app/src/main/res/layout/activity_atv_cadastro_cliente.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="52dp"
+        android:layout_marginStart="2dp"
         android:orientation="horizontal">
 
         <TextView
@@ -20,12 +21,15 @@
             android:layout_weight="1"
             android:text="@string/titulo_cadastro_cliente"
             android:textSize="18sp"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnGravar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="@string/btn_gravar" />
             android:layout_weight="1"
             android:text="@string/btn_gravar"
             app:backgroundTint="@android:color/darker_gray" />
@@ -34,6 +38,9 @@
             android:id="@+id/btnExcluir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="@string/btn_excluir"
+            />
             android:layout_weight="1"
             android:text="@string/btn_excluir"
             app:backgroundTint="@android:color/darker_gray" />
@@ -42,6 +49,8 @@
             android:id="@+id/btnVoltar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/btn_Voltar"
+            />
             android:layout_weight="1"
             android:text="@string/btn_Voltar"
             app:backgroundTint="@android:color/darker_gray" />
@@ -49,6 +58,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="5dp"
+        >
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -124,8 +136,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:inputType="textCapCharacters"
+                />
                 android:inputType="text" />
-
         </LinearLayout>
     </ScrollView>
 
