--- a/app/src/main/res/layout/activity_atv_cliente.xml
+++ b/app/src/main/res/layout/activity_atv_cliente.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Telas.AtvCliente"
+    android:scaleType="centerCrop"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-
+      
         <TextView
             android:id="@+id/txtList"
             android:layout_width="wrap_content"
@@ -34,7 +35,6 @@
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:background="@drawable/bg_button_normal"
             />
 
     </LinearLayout>
@@ -42,6 +42,9 @@
     <ListView
         android:id="@+id/lstCliente"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:cacheColorHint="@color/white"
+        />
         android:layout_height="match_parent" />
 
 </LinearLayout>
