--- a/app/src/main/res/layout/activity_atv_cadastro_cliente.xml
+++ b/app/src/main/res/layout/activity_atv_cadastro_cliente.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginRight="2dp"
             android:text="@string/titulo_cadastro_cliente"
             android:textSize="18sp"
             android:textColor="@color/black"
@@ -28,32 +29,28 @@
             android:id="@+id/btnGravar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="12sp"
             android:layout_marginRight="5dp"
             android:text="@string/btn_gravar" />
-            android:layout_weight="1"
-            android:text="@string/btn_gravar"
-            app:backgroundTint="@android:color/darker_gray" />
 
         <Button
             android:id="@+id/btnExcluir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="12sp"
             android:layout_marginRight="5dp"
             android:text="@string/btn_excluir"
             />
-            android:layout_weight="1"
-            android:text="@string/btn_excluir"
-            app:backgroundTint="@android:color/darker_gray" />
 
         <Button
             android:id="@+id/btnVoltar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="3dp"
+            android:textSize="12sp"
             android:text="@string/btn_Voltar"
             />
-            android:layout_weight="1"
-            android:text="@string/btn_Voltar"
-            app:backgroundTint="@android:color/darker_gray" />
+
     </LinearLayout>
 
     <ScrollView
