--- a/app/src/main/res/layout/activity_atv_servico.xml
+++ b/app/src/main/res/layout/activity_atv_servico.xml
@@ -4,22 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Telas.AtvCliente"
-    android:scaleType="centerCrop"
+    tools:context=".Telas.atvServico"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-      
+
         <TextView
             android:id="@+id/txtList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:layout_marginLeft="5dp"
-            android:text="@string/lista_clientes"
+            android:text="@string/lista_servicos"
             android:textColor="#000"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -40,11 +39,10 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/lstCliente"
+        android:id="@+id/lstServico"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="@color/white"
         />
 
 </LinearLayout>
-
