--- a/app/src/main/res/layout/activity_atv_servico.xml
+++ b/app/src/main/res/layout/activity_atv_servico.xml
@@ -29,10 +29,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="5dp"
             android:text="@string/btnCad"
             android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            />
+
+        <Button
+            android:id="@+id/btnVoltar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="5dp"
+            android:text="@string/btnVoltar"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
             android:textStyle="bold"
             />
 
