Desenvolvido o login do funcionario

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,12 +40,12 @@
         android:layout_marginBottom="18dp"
         android:text="@string/Porque_Você_Vale_a_Pena"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@id/edit_text_credentials"
+        app:layout_constraintBottom_toTopOf="@id/edtCredentials"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edit_text_credentials"
+        android:id="@+id/edtCredentials"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="18dp"
@@ -59,11 +59,11 @@
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:background="@drawable/bg_edittext_normal"
-        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
+        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
         />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edit_text_password"
+        android:id="@+id/edtPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="18dp"
