--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,27 +77,28 @@
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:background="@drawable/bg_edittext_normal"
-        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
+        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
         />
 
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_sign_in"
+            android:id="@+id/btnEntrar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="18dp"
             android:background="@drawable/bg_button_normal"
             android:text="@string/sign_in"
+            android:onClick="onClick"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginStart="18dp"
             android:layout_marginEnd="18dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_register" />
+            app:layout_constraintBottom_toTopOf="@+id/btnCadastrar" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_register"
+            android:id="@+id/btnCadastrar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="18dp"
