--- a/app/src/main/res/layout/activity_tela_cadastrar_funcionario.xml
+++ b/app/src/main/res/layout/activity_tela_cadastrar_funcionario.xml
@@ -53,7 +53,7 @@
                 android:layout_marginEnd="18dp"
                 android:layout_marginBottom="18dp"
                 android:hint="@string/cpf"
-                android:inputType="text"
+                android:inputType="number"
                 android:imeOptions="actionDone"
                 android:paddingStart="18dp"
                 android:paddingEnd="18dp"
@@ -107,7 +107,7 @@
                 android:layout_marginEnd="18dp"
                 android:layout_marginBottom="18dp"
                 android:hint="@string/telefone"
-                android:inputType="text"
+                android:inputType="number"
                 android:imeOptions="actionDone"
                 android:paddingStart="18dp"
                 android:paddingEnd="18dp"
@@ -125,7 +125,7 @@
                 android:layout_marginEnd="18dp"
                 android:layout_marginBottom="18dp"
                 android:hint="@string/comissao"
-                android:inputType="text"
+                android:inputType="number"
                 android:imeOptions="actionDone"
                 android:paddingStart="18dp"
                 android:paddingEnd="18dp"
